Unit Test - 1
1 unit test written (doesnt work yet)